--- a/DevKit/DevKit.UI/frmDaily.resx
+++ b/DevKit/DevKit.UI/frmDaily.resx
@@ -117,12 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>16, 6</value>
-  </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>121, 6</value>
-  </metadata>
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -147,6 +141,25 @@
   <metadata name="Column8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>226, 6</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="tsbtnImport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH7SURBVDhPhZLPa9NgGMdF8P/yoBd386g39SQMFBkKMnvS
+        4y47DALTiyDCzoUK7SWkoJZtLMnyo1nbZdkPWrvRNEnzs1+fN+/b2jqHD3z4PiTv95vnSXJrsRzH2ez3
+        +xgMBsHfDIfDyLbbQbVaXRXHr5fjHElFUeCmct1THOomarXaeqVSuS1sf4omkPI8R1FMiUJA/XSKKfXd
+        3gkMwyEs1Ov1T61W646w8rJtW0rTDHlORoJpPgui3ml3sbenYX9fJ1QW8kVYeZmmSQEpGXNkjCxHzqCe
+        6cVFH+7xCeHROh7aVnskrLxM3ZaSJMVXb43MGYcmYlPNdX49h+d5ywG6bkiIgc/HL4kXSGiaEgplpEIZ
+        bD3XdXnAx6PnKOkIJeTx21LjOFkm4ZrSBL1ejwdsmU9Lw7/Ysp5gMonnRBHXJMnQ6XR4wIb6GLXLNXwj
+        mC72TDfURwijCZmJkGscp6D/hgd82H2InbNV7Jxf5z3dC4MIgWDWsyksy+IB736sgLH+/QEpYwXb3Wel
+        jschJ1jUqJzCMAweMKufzV0p84E3yn28Vu7RwQC+gJn9Mox6P0RIq+j64XJAU2lKV1cjvJLvon/5C74/
+        xojw/YCUgkaEULaGpmnLAbIsS+xAFk/pZSXlU26CfQVN05cDGo3G5sGBClXVgv+jx4rSPP8NS+b0McPA
+        5R4AAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>34</value>
   </metadata>
