table structure build

--- a/DevKit/DevKit.UI/frmDaily.resx
+++ b/DevKit/DevKit.UI/frmDaily.resx
@@ -148,16 +148,16 @@
   <data name="tsbtnImport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH5SURBVDhPhZHPa9NgGMdF8P/yoBd386g39SQMFBkKMnvS
-        4y47DALqRRBh50KF9pK2oFa3JYvZ0qztkupGajeaJml+f33evG9r4xw+8OH78Ob9fvM8yZXlMk1z03Ec
-        jEYj72/G43FgGF2vWq2uiusXiwKkLMtwWVnWD3zXDlCr1dYrlcpVYftTLCBNU2RZTmQC6vMcOfX9gQ1d
-        N4lD1Ov1t51O55qw8jIMQ4rjBGlKRoJpOg+i3uz2sbOzj91djVBZyHth5aXrOgXEZEyRMJIUKYN6pqen
-        DqxjmxjSOkN09e5EWHnpmiFFUYwPwzUyJxyaiE210MV5Ctu2ywGapksIgXfHj4lHiGiaAgplxEIZbD3L
-        snjAm6OHKOgJJeTp80LDMCoTcY1pgsFgwAO2Du4Xhn+xdXgPs1m4IAi4RlGCXq/HAzbUu6idreEjwXS5
-        Z7qh3oEfzMhM+FzDMIZpHvGAV99uY/vnKrZPLvKSnvleAE8w79kU9Nd4wIvPK2Csf7pFyljB6/6DQqdT
-        n+Mta1BMoWkaD5jXl/ZXKXGBZ62beNq6QRc9uAJmdosw6l0fPq2iqvvlgHarLZ2fT/BEvg7n7Bdcd4oJ
-        4boeKQVNCKFsDUVRygGyLEvsQhLm9LGi4i2Xwf6CoqjlgEajsUmHbDTvf+ztqWGz2Tz5DRbN8/7qm7Py
-        AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH8SURBVDhPhZHPa9NgHMZF8P/yoBd386g39SQMJjIUZPak
+        x112GASml4EIOxcqtJf+ALW6pmmaLc3aLqlutHajaZLm9+P3zfu2ts7hAx+eL+n7PPm+6Y1lGYaxMxwO
+        MRqNnL8Zj8eernecfD6/Lo5fFRVISZLgOpnmD7TVIxQKha1cLndTxP6IFcRxjCRJiURAc5oipbnXt6Bp
+        BnGMYrH4vl6v3xJRLl3XpTCMEMcUJJjH8yKajU4Ph4ctNBoqobCSDyLKpWkaFYQUjBExohgxg2bm5+dD
+        mKcWMaDrDNBpdyYiyqWpuhQEIT4ONikccWgjttXCF89jWJa1WqCqmgQf2D99RmwgoG0yqJQRCmew65mm
+        yQvenTxFRlc4UZ6+ytz3g1UC7iFt0O/3ecHu0eMs8C92jx9hNvMXeB73IIjQ7XZ5wbbyEIWLTXwimC/P
+        zLeVB3C9GYUJl7vvhzCME17w9vt9HPxcx8HZVd7Qb67jwRHMZ7ZFu93mBa+/rIGx9fkeOWMNe70nmU+n
+        LsdZdi/botVq8YK5vta+SZENvKzexYvqHTrowBawsJ2V0Wy7cOkqzaayWlCr1qTLywmel29jePELtj3F
+        hLBth5yKJoRwdg1ZllcLyuWyxA5EfkofK8jech3sX5Dl5mpBqVTaobWgKC3nfzQaTb9SqZz9BghQ8+tO
+        O2xwAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
