--- a/DevKit/DevKit.UI/frmQueryWindow.resx
+++ b/DevKit/DevKit.UI/frmQueryWindow.resx
@@ -148,6 +148,16 @@
         QmCC
 </value>
   </data>
+  <data name="tsbtnExeOnSelected.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADESURBVDhPY0AHnz9/vv/lyxcDKJd08O3bt/9A/P779+8O
+        UCHSAMiAmHkR/1+9f/UfaEgCVJh4ADLAosvkf8AMn/+XHl36//Xr1/lQKeIAzAAQdpno8P/47WMgL61/
+        //69AFQJfoBsAAyvP7cWZMh5ogzBZgAId+/sBAcuwRjCZQAI12+uBRsCDJcAqHJMQIwBeKMYlwHTD0z9
+        T1Qiw2YA2YEIikZYWiA5GkGpEaQZyO+HShEHQAZQnJSBmPzMRFp2ZmAAANsmD2hmf7/nAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <metadata name="openfileDiag.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
