--- a/DevKit/DevKit.UI/Properties/Resources.resx
+++ b/DevKit/DevKit.UI/Properties/Resources.resx
@@ -151,4 +151,7 @@
   <data name="_1458590075_grid_layout_window" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1458590075_grid-layout-window.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Grid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Grid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
